# merkle_tree_app

./: .gitignore  Cargo.toml  Dockerfile.client  Dockerfile.server  README.md  REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml
client/: Cargo.toml  merkle_root.txt
client/data/: file1.txt
client/src/: main.rs  setup.rs
data/: file2.txt  file3.txt
docs/: .gitignore  file-sharing.md  index.md  setup.md  testing-deployment.md
docs/.vitepress/: config.js
docs/merkle-tree/: implementation.md  starter-code.md  understanding.md
merkle_tree/: Cargo.toml  README.md
merkle_tree/src/: lib.rs
scripts/: e2e_test.sh
server/: Cargo.toml
server/src/: lib.rs  main.rs
server/tests/: integration_tests.rs
