[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.9"
tokio = { version = "1", features = ["full"] }
merkle_tree = { path = "../merkle_tree" }
hex = "0.4.3"
rand = { version = "0.8.5", features = ["alloc", "small_rng"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
random_word = "0.3.1"
serde = { version = "1.0", features = ["derive"] }
mockito = "0.31"
serde_json = "1.0"

[[bin]]
name = "client"
path = "src/main.rs"

[[bin]]
name = "setup_files"
path = "src/setup.rs"
