[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9"
hex = "0.4.3"
rand = { version = "0.8.5", features = ["alloc", "small_rng"] }
rand_core = { version = "0.6.4", features = ["getrandom"] }
random_word = "0.3.1"